# core-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Engine/: CMakeLists.txt  Engine.hpp
Engine/Assets/: AssetManager.cpp  AssetManager.hpp
Engine/Core/: Application.cpp  Application.hpp  EntryPoint.cpp  EntryPoint.hpp  Event.cpp  Event.hpp  LayerStack.cpp  LayerStack.hpp  Macro.hpp  Timer.cpp  Timer.hpp  Window.hpp
Engine/Input/: Keyboard.hpp  Mouse.hpp
Engine/Maths/: Noise.cpp  Noise.hpp  Vector.cpp  Vector.hpp
Engine/Platform/: CMakeLists.txt
Engine/Platform/Linux/: LinuxWindow.cpp
Engine/Platform/Windows/: WindowsWindow.cpp
Engine/Profiler/: ChromeTraceProfiler.cpp  ChromeTraceProfiler.hpp
Engine/Renderer/: Camera.cpp  Camera.hpp  CommandBuffer.cpp  CommandBuffer.hpp  ComputePipeline.cpp  ComputePipeline.hpp  Converter.cpp  Converter.hpp  Descriptor.cpp  Descriptor.hpp  DeviceSemaphore.hpp  Enum.hpp  Enums.hpp  FrameBuffer.cpp  FrameBuffer.hpp  Graphic.hpp  GraphicApi.hpp  GraphicContext.hpp  GraphicPipeline.hpp  Graphics.hpp  GraphicsContext.cpp  GraphicsContext.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  Image.cpp  Image.hpp  InstanceBuffer.cpp  InstanceBuffer.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  MeshRenderer.cpp  MeshRenderer.hpp  PipelineLayout.hpp  Platform.hpp  RenderPass.cpp  RenderPass.hpp  RenderTarget.cpp  RenderTarget.hpp  (+23 more)
Engine/Renderer/Vulkan/: EnumConverter.hpp  IndexBuffer.cpp  IndexBuffer.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VulkanCommandBuffer.cpp  VulkanCommandBuffer.hpp  VulkanConverter.cpp  VulkanConverter.hpp  VulkanGraphic.cpp  VulkanGraphicPipeline.cpp  VulkanGraphicPipeline.hpp  VulkanGraphics.cpp  VulkanGraphics.hpp  VulkanHelper.cpp  VulkanHelper.hpp  VulkanIncludes.hpp  VulkanRenderPass.cpp  VulkanRenderer.cpp  VulkanRenderer.hpp  VulkanSemaphore.cpp  VulkanSemaphore.hpp  VulkanSwapchain.cpp  VulkanSwapchain.hpp  VulkanTypes.hpp  VulkanUtility.cpp  VulkanUtility.hpp
(+88 files in other folders)
