if(WIN32)
    include_directories("${CMAKE_SOURCE_DIR}/Engine/Vendor/glfw/include/")
    file(GLOB sources "Windows/*.cpp")
    add_library(Platform STATIC ${sources})
elseif(UNIX)
    file(GLOB sources "Linux/*.cpp")
    add_library(Platform STATIC ${sources})
    target_link_libraries(Platform glfw)
endif()
